change from firefox to librewolf

--- a/modules/themes/main/config/Fluent-Dark/gtk-3.0/gtk.css
+++ b/modules/themes/main/config/Fluent-Dark/gtk-3.0/gtk.css
@@ -6216,7 +6216,7 @@ tooltip.background.chromium {
 }
 
 /***********
- * Firefox *
+ * Librewolf *
  ***********/
 #MozillaGtkWidget > widget text {
   background-color: #2B2B2B;
